Authentication completed; complete PostController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.password=launchcode
 # Specify the DBMS
 spring.jpa.database = MYSQL
 
-# Show or not log for each sql query
+# Show or not log for each sql query - ***CHANGED - was: false ***
 spring.jpa.show-sql = false
 
-# Hibernate ddl auto (create, create-drop, update)
+# Hibernate ddl auto (create, create-drop, update) - ***CHANGED - was: update ***
 spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
